# createSnapshot

./: .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  ScreenCard.pro  main  main.cpp
release/: main.moc
